wxc/include/ewxw/wxc_glue.h



/* wxFileDropTarget */
TClassDefExtend(wxFileDropTarget,wxDropTarget)

/* wxFileHistory */
TClassDefExtend(wxFileHistory,wxObject)
void       wxFileHistory_AddFileToHistory( TSelf(wxFileHistory) _obj, TStringVoid file );

void       wxFileHistory_AddFilesToMenu( TSelf(wxFileHistory) _obj, TClass(wxMenu) menu );

TClass(wxFileHistory) wxFileHistory_Create( int maxFiles );

void       wxFileHistory_Delete( TSelf(wxFileHistory) _obj );

int        wxFileHistory_GetCount( TSelf(wxFileHistory) _obj );

TStringLen wxFileHistory_GetHistoryFile( TSelf(wxFileHistory) _obj, int i, TStringOutVoid _buf );

int        wxFileHistory_GetMaxFiles( TSelf(wxFileHistory) _obj );

TArrayLen  wxFileHistory_GetMenus( TSelf(wxFileHistory) _obj, TArrayObjectOutVoid(wxMenu) _ref );

int        wxFileHistory_GetNoHistoryFiles( TSelf(wxFileHistory) _obj );

void       wxFileHistory_Load( TSelf(wxFileHistory) _obj, TClass(wxConfigBase) config );

void       wxFileHistory_RemoveFileFromHistory( TSelf(wxFileHistory) _obj, int i );

void       wxFileHistory_RemoveMenu( TSelf(wxFileHistory) _obj, TClass(wxMenu) menu );

void       wxFileHistory_Save( TSelf(wxFileHistory) _obj, TClass(wxConfigBase) config );

void       wxFileHistory_UseMenu( TSelf(wxFileHistory) _obj, TClass(wxMenu) menu );